Fix Drawer menu alignment and checkout-button CSS

--- a/frontend/src/components/Drawer/Drawer.css
+++ b/frontend/src/components/Drawer/Drawer.css
@@ -104,7 +104,7 @@
 
   .drawer-menu {
     position: absolute;
-    top: 10vh;
+    top: 13vh;
     left: 0;
     z-index: 102;
     width: 100vw;
@@ -116,7 +116,13 @@
     flex-direction: column;
     align-items: flex-end;
     justify-content: center;
-    padding: 15px;
+    padding: 15px 0;
+  }
+
+  .drawer-menu > div > div {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
   }
 
   .menu-button {
